# image-parser

./: .gitignore  CMakeLists.txt  README.md
include/: Chunk.h  ChunkType.h  CompressionMethod.h  FiltrationType.h  InterlaceType.h  PngFile.h
include/Chunks/: DataChunk.h  HeaderChunk.h  PaletteChunk.h
include/compression/: decompressor.h
include/memory/: memory_streambuf.h
include/png/: chunk.h  chunk_type.h  compression_method.h  filtration_type.h  interlace_type.h  png_file.h  png_image.h
include/png/chunks/: data_chunk.h  header_chunk.h  palette_chunk.h
src/: Chunk.cpp  PngFile.cpp  main.cpp
src/Chunks/: DataChunk.cpp  HeaderChunk.cpp  PaletteChunk.cpp
src/compression/: decompressor.cpp
src/memory/: input_memory_streambuf.cpp  output_memory_streambuf.cpp
src/png/: chunk.cpp  png_file.cpp  png_image.cpp
src/png/chunks/: data_chunk.cpp  header_chunk.cpp  palette_chunk.cpp
